k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskmanager
  labels:
    name: taskmanager
    app.kubernetes.io/managed-by: kubectl
